--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "UA-2011187-3" # Replace this with your ID, or delete
-    anonymize_ip         : true
+    tracking_id          : "G-D1TPDWP7Z7" # Replace this with your ID, or delete
+    anonymize_ip         : false
 
 
 # Site Author
