--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ title_separator          : "-"
 #subtitle                 : "A Jekyll theme"
 name                     : &name "Skanda Vivek" # &name is a YAML anchor which can be *referenced later
 description              : &description "A flexible Jekyll theme for your blog or site with a minimalist aesthetic."
-url                      : https://mmistakes.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://skandavivek.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               : "skandavivek/skandavivek.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
