Changing jobs and contents!

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,21 @@
 # example navigation
-foo:
-  - title: "Parent Link 1"
-    url: /parent-1-page-url/
-    children:
-      - title: "Child Link 1"
-        url: /child-1-page-url/
-      - title: "Child Link 2"
-        url: /child-2-page-url/
-  - title: "Parent Link 2"
-    url: /parent-2-page-url/
-    children:
-      - title: "Child Link 1"
-        url: /child-1-page-url/
-      - title: "Child Link 2"
-        url: /child-2-page-url/
-      - title: "Child Link 3"
-        url: /child-3-page-url/
+# foo:
+#   - title: "Parent Link 1"
+#     url: /parent-1-page-url/
+#     children:
+#       - title: "Child Link 1"
+#         url: /child-1-page-url/
+#       - title: "Child Link 2"
+#         url: /child-2-page-url/
+#   - title: "Parent Link 2"
+#     url: /parent-2-page-url/
+#     children:
+#       - title: "Child Link 1"
+#         url: /child-1-page-url/
+#       - title: "Child Link 2"
+#         url: /child-2-page-url/
+#       - title: "Child Link 3"
+#         url: /child-3-page-url/
 
 
 # main links
@@ -24,12 +24,12 @@ main:
   #   url: /docs/quick-start-guide/
   - title: "About"
     url: /about/
-  - title: "Projects"
-    url: /projects/
-  - title: "Posts"
-    url: /posts/
-  - title: "Tags"
-    url: /tags/
+  # - title: "Projects"
+  #   url: /projects/
+  # - title: "Posts"
+  #   url: /posts/
+  # - title: "Tags"
+  #   url: /tags/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Terms &amp; Privacy Policy"
