--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-universal" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "UA-201477748-1" # Replace this with your ID, or delete
+    tracking_id          : "G-361245756" # Replace this with your ID, or delete
     anonymize_ip         : false
 
 
