--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,8 +28,8 @@ main:
   #   url: /projects/
   # - title: "Posts"
   #   url: /posts/
-  # - title: "Tags"
-  #   url: /tags/
+  # - title: "Newsletter"
+  #   url: /posts/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Terms &amp; Privacy Policy"
