--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,8 +26,8 @@ main:
     url: /about/
   # - title: "Projects"
   #   url: /projects/
-  # - title: "Posts"
-  #   url: /posts/
+  - title: "Posts"
+    url: /posts/
   # - title: "Newsletter"
   #   url: /posts/
   # - title: "Sample Collections"
